# LifeOss

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: 10-out-of-10-readiness-checklist.md  README.md  agent-handoff.md  decisions-log.md  dev-setup.md  future-features.md  icon-system.md  lifeos-v4-design.md  module-scenes.md  open-questions.md  pre-update-rollback-runbook.md  release-checklist.md  release-security-checklist.md  security-audit-policy.md  spec-draft.md  update-server.md
docs/archive/: 2026-05-05-lifeos-v3-milestone-0-foundation.md  2026-05-05-logic-redesign-pass.md  design-selection.md  historical-project-audit-2026-05-13-ru.md  historical-project-audit-2026-05-13.md  implementation-roadmap.md  release-evidence-2026-05-15-private-dogfood.md  source-projects.md
docs/design/: app-preview.html  bento-design.html
docs/modules/: README.md  calendar.md  contacts.md  diary.md  finance.md  focus.md  habits.md  home.md  notes.md  physical-health.md  projects.md  psychological-health.md  quick-notes.md  reminders.md  settings.md  tasks.md  trading.md
src/: App.tsx  main.tsx  moduleIcons.tsx  moduleRegistry.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/lifeos-core/: Cargo.toml
src-tauri/crates/lifeos-core/src/: lib.rs
src-tauri/crates/lifeos-storage/: Cargo.toml
src-tauri/crates/lifeos-storage/src/: lib.rs
src-tauri/src/: main.rs
src/components/: CommandPalette.tsx  ContextMenu.tsx  DatePicker.tsx  Sidebar.tsx  Topbar.tsx
(+13 files in other folders)
